# yoloface

./: .gitignore  AGE_AND_GENDER_UPGRADE_SUMMARY.md  COMPLETION_REPORT.md  FILES.md  GENDER_DETECTION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REFACTORING.md  SETUP_INSTRUCTIONS.md  STRUCTURE.md  TROUBLESHOOTING.md  age_detector.py  app_main.py  config.yaml  cv_test.py  db_manager.py  demo_workflow.py  download_haarcascades.py  exporter.py  go.mod  install.sh  install_dependencies.py  install_dependencies.sh  login_ui.py  pyproject.toml  requirements.txt  setup.py  test_age_and_gender.py  test_age_detection.py  test_gender_detection.py  yolo_fastestv2_test.py  yolo_test.py  yolo_test_multiprocess.py  yolo_track.py  ~$视觉 课程设计指导书 2025-李红.doc
doc/: APP_CALL_LOGIC.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  DEVICE_COMPATIBILITY.md  FILES.md  FLOWCHART.md  GENDER_ACCURACY_IMPROVEMENT.md  GENDER_DETECTION_GUIDE.md  GENDER_DETECTION_QUICK_REFERENCE.md  GENDER_RECOGNITION.md  GUI_SETUP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOGIN_GUIDE.md  PROJECT_CLEANUP.md  PROJECT_FLOW_EXPLANATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  REFACTORING.md  STRUCTURE.md  TEAM_DIVISION.md  TROUBLESHOOTING.md  USAGE.md  aim.md  机器视觉 课程设计指导书 2025-李红.doc  答辩常见问题Q&A.md  项目答辩介绍.md
haarcascades/: README.md
models/: README.md
scripts/: 1.py  2.py  README.md  age_detector.py  check_imports.py  debug_gender_features.py  diagnose.py  download_gender_model.py  download_haarcascades.py  gender_detector.py  install.sh  legacy_compat.py  run_tests.py  test_age_display.py  test_db_connection.py  test_dialog.py  test_gender.py  test_launch.py  test_login_dialog.py  yolo_test.py  yolo_track.py
src/yoloface/: __init__.py  (+2 more)
tests/: test_detectors.py
(+17 files in other folders)
